nodejs-persistent/frontend/nodejs-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodejs-mongo-persistent
    tier: frontend
  name: nodejs-mongo-persistent
spec:
  replicas: 15
  selector:
    matchLabels:
      name: nodejs-mongo-persistent
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: nodejs-mongo-persistent
      name: nodejs-mongo-persistent
    spec:
      containers:
      - env:
        - name: DATABASE_SERVICE_NAME
          value: mongodb
        - name: MONGODB_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: nodejs-mongo-persistent
        - name: MONGODB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: nodejs-mongo-persistent
        - name: MONGODB_DATABASE
          value: sampledb
        - name: MONGODB_ADMIN_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-admin-password
              name: nodejs-mongo-persistent
        image: quay.io/swinches/nodejs-mongo-persistent:1.0
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 3
        name: nodejs-mongo-persistent
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 3
          timeoutSeconds: 3
        resources:
          requests:
            memory: "256Mi"
            cpu: "512m"
          limits:
            memory: "1Gi"
            cpu: "1"
