nodejs-persistent/frontend/nodejs-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nodejs-mongo-persistent
    tier: frontend
  name: nodejs-mongo-persistent
  namespace: nodejs
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nodejs-mongo-persistent
    tier: frontend
status:
  loadBalancer: {}
